--- a/FastECS/FastECS.vcxproj.filters
+++ b/FastECS/FastECS.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="TestSystem.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
+    <ClCompile Include="ECS\Entity.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ECS\Component.h">
